tests/errors/array_constructor_with_asterisk_in_type_spec_cc.f90
program array_constructor_with_asterisk_in_type_spec_cc
    print *, [character(*) :: "a", "b", "ball", "cat"]
    print *, [character(*) :: "a2", "b2", "ball2", "cat2"]
    print *, "continued compilation"
end program
